may/src/parser/tests/snapshots/may__parser__tests__ind__ind_list.snap
---
source: may/src/parser/tests/ind.rs
expression: cst
---
Ind(
    Ind {
        indkw: ByteIndex(
            1,
        ),
        params: Some(
            ParenthesizedCommaSeparatedParamDefs {
                lparen: ByteIndex(
                    4,
                ),
                params: One(
                    ParamDef {
                        dash: None,
                        name: Ident(
                            Ident {
                                value: "T",
                                start: ByteIndex(
                                    5,
                                ),
                            },
                        ),
                        type_: Universe(
                            UniverseLiteral {
                                level: 0,
                                start: ByteIndex(
                                    8,
                                ),
                                erasable: false,
                            },
                        ),
                    },
                ),
                rparen: ByteIndex(
                    12,
                ),
            },
        ),
        innards: IndCommonInnards {
            name: Ident {
                value: "List",
                start: ByteIndex(
                    14,
                ),
            },
            indices: None,
            cases: Snoc(
                Snoc(
                    Nil,
                    IndCase {
                        casekw: ByteIndex(
                            23,
                        ),
                        name: Ident {
                            value: "nil",
                            start: ByteIndex(
                                28,
                            ),
                        },
                        params: None,
                        return_type: None,
                    },
                ),
                IndCase {
                    casekw: ByteIndex(
                        36,
                    ),
                    name: Ident {
                        value: "cons",
                        start: ByteIndex(
                            41,
                        ),
                    },
                    params: Some(
                        ParenthesizedCommaSeparatedParamDefs {
                            lparen: ByteIndex(
                                45,
                            ),
                            params: Snoc(
                                One(
                                    ParamDef {
                                        dash: None,
                                        name: Ident(
                                            Ident {
                                                value: "car",
                                                start: ByteIndex(
                                                    46,
                                                ),
                                            },
                                        ),
                                        type_: VarOrApp(
                                            Var(
                                                Ident {
                                                    value: "T",
                                                    start: ByteIndex(
                                                        51,
                                                    ),
                                                },
                                            ),
                                        ),
                                    },
                                ),
                                ParamDef {
                                    dash: None,
                                    name: Ident(
                                        Ident {
                                            value: "cdr",
                                            start: ByteIndex(
                                                54,
                                            ),
                                        },
                                    ),
                                    type_: VarOrApp(
                                        Var(
                                            Ident {
                                                value: "List",
                                                start: ByteIndex(
                                                    59,
                                                ),
                                            },
                                        ),
                                    ),
                                },
                            ),
                            rparen: ByteIndex(
                                63,
                            ),
                        },
                    ),
                    return_type: None,
                },
            ),
            returnkw: ByteIndex(
                69,
            ),
            universe: UniverseLiteral {
                level: 0,
                start: ByteIndex(
                    76,
                ),
                erasable: false,
            },
        },
        next_val: VarOrApp(
            App(
                App {
                    callee: Var(
                        Ident {
                            value: "List",
                            start: ByteIndex(
                                82,
                            ),
                        },
                    ),
                    lparen: ByteIndex(
                        86,
                    ),
                    args: One(
                        VarOrApp(
                            Var(
                                Ident {
                                    value: "Nat",
                                    start: ByteIndex(
                                        87,
                                    ),
                                },
                            ),
                        ),
                    ),
                    rparen: ByteIndex(
                        90,
                    ),
                },
            ),
        ),
    },
)
