may/src/parser/tests/snapshots/may__parser__tests__ind__non_universe_return_type.snap
---
source: may/src/parser/tests/ind.rs
expression: err
---
Some(
    Ident(
        Ident {
            value: "illegal",
            start: ByteIndex(
                76,
            ),
        },
    ),
)
